aggiunto ancora un po' di stile, rimane problema dell'istruzione "PROMPT" che non permette la visualizzazione della pagina HTML se non alla fine del gioco.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="container">
         <h1>Easy campo minato</h1>
 
-        <div id="mineFieldContainer">
-        </div>
+        <div id="mineFieldContainer"></div>
 
+        <h2 id="scoreContainer" class="hidden">Punteggio ottenuto: <span id="score"></span> [max=<span id="maxScore"></span>]</h2>
     </div>
     <script src="main.js"></script>
 </body>
